[gd_scene load_steps=4 format=3 uid="uid://6cyxh7kyrvm5"]

[ext_resource type="Script" uid="uid://hl5fi862uhki" path="res://Scripts/InterfazInicio/inicio_control.gd" id="1_3lpjo"]
[ext_resource type="Texture2D" uid="uid://bn6wxfp1ntvjr" path="res://Assets/New Piskel (14).png" id="2_v8sqa"]
[ext_resource type="Texture2D" uid="uid://cp1360ocp4jyd" path="res://Assets/AssetsMenu/Botones.png" id="3_v8sqa"]

[node name="InicioControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3lpjo")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_v8sqa")

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -501.0
offset_top = -194.0
offset_right = -437.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
text = "Fished
"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
clip_contents = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -432.0
offset_top = -163.0
offset_right = -296.0
offset_bottom = 253.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(2.56003, 0.882429)
alignment = 1

[node name="Jugar" type="Button" parent="VBoxContainer"]
layout_mode = 2
icon = ExtResource("3_v8sqa")
flat = true
clip_text = true

[node name="Label" type="Label" parent="VBoxContainer/Jugar"]
layout_mode = 0
offset_left = 50.0
offset_top = 53.8922
offset_right = 91.0
offset_bottom = 76.8922
text = "Jugar"

[node name="Opcion" type="Button" parent="VBoxContainer"]
layout_mode = 2
icon = ExtResource("3_v8sqa")
flat = true

[node name="Label2" type="Label" parent="VBoxContainer/Opcion"]
layout_mode = 0
offset_left = 42.0
offset_top = 55.6088
offset_right = 97.0
offset_bottom = 78.6088
text = "Opcion"

[node name="Salir" type="Button" parent="VBoxContainer"]
layout_mode = 2
icon = ExtResource("3_v8sqa")
flat = true

[node name="Label3" type="Label" parent="VBoxContainer/Salir"]
layout_mode = 0
offset_left = 49.0
offset_top = 55.3293
offset_right = 90.0
offset_bottom = 78.3293
text = "Salir"

[connection signal="pressed" from="VBoxContainer/Jugar" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="VBoxContainer/Opcion" to="." method="_on_opcion_pressed"]
[connection signal="pressed" from="VBoxContainer/Salir" to="." method="_on_salir_pressed"]
